Added post deletion logic

--- a/akamatsu/templates/admin/layout.html
+++ b/akamatsu/templates/admin/layout.html
@@ -14,6 +14,12 @@
 
 {% block html_body %}
 <body>
+    {# Global modal #}
+    <div id="global-modal" class="modal">
+        <div class="modal-background"></div>
+        <div id="global-modal-content"></div>
+    </div>
+
     {# Sidebar #}
     <aside id="admin-sidebar" class="menu">
         <p class="menu-label has-text-right">
