--- a/akamatsu/templates/admin/posts/index.html
+++ b/akamatsu/templates/admin/posts/index.html
@@ -1,5 +1,7 @@
 {% extends "admin/layout.html" %}
 
+{% set _include_csrf = true %}
+
 {% block title %}{{ _('Manage posts') }}{% endblock %}
 
 {% block breadcrumbs %}
@@ -22,6 +24,6 @@
 </div>
 
 <div class="box page-items">
-    {% include "admin/posts/partial/posts_page.html" %}
+    {% include "admin/posts/partials/posts_page.html" %}
 </div>
 {% endblock %}
