--- a/akamatsu/templates/admin/posts/partials/ghosts_page.html
+++ b/akamatsu/templates/admin/posts/partials/ghosts_page.html
@@ -52,7 +52,7 @@
                                 <span class="icon"><i class="fas fa-edit"></i></span>
                                 <span>{{ _('Edit') }}</span>
                             </a>
-                            <a href="{{ url_for('admin.delete_post', hashid=post.hashid) }}" class="button delete-item">
+                            <a data-dest="{{ url_for('admin.delete_post', hashid=post.hashid, ref=url_for_self(page=posts.page, sort=sort_key, order=order_dir)|urlencode) }}" class="button delete-item">
                                 <span class="icon"><i class="fas fa-trash"></i></span>
                                 <span>{{ _('Delete') }}</span>
                             </a>
