--- a/akamatsu/templates/admin/users/partials/users_page.html
+++ b/akamatsu/templates/admin/users/partials/users_page.html
@@ -1,4 +1,4 @@
-{# Partial to render a single post page #}
+{# Partial to render a single user page #}
 {% import "macros.html" as macros %}
 
 <div class="table-container">
