--- a/akamatsu/templates/admin/pages/partials/pages_page.html
+++ b/akamatsu/templates/admin/pages/partials/pages_page.html
@@ -1,4 +1,4 @@
-{# Partial to render a single post page #}
+{# Partial to render a single page page #}
 {% import "macros.html" as macros %}
 
 <div class="table-container">
