Added version info to admin dashboard

--- a/akamatsu/templates/admin/layout.html
+++ b/akamatsu/templates/admin/layout.html
@@ -22,6 +22,8 @@
 
     {# Sidebar #}
     <aside id="admin-sidebar" class="menu">
+        <p class="menu-label has-text-right">akamatsu {{ config['__version__'] }}</p>
+
         <p class="menu-label has-text-right">
             <span class="icon"><i class="fas fa-user"></i></span>
             <span>{{ current_user.username }}</span>
