Replaced cssmin with rcssmin.
cssmin was not dealing with whitespaces in calc functions correctly.

--- a/akamatsu/templates/layout.html
+++ b/akamatsu/templates/layout.html
@@ -71,7 +71,7 @@
     <nav class="navbar is-primary has-margin-bottom" role="navigation" aria-label="main navigation">
         <div class="container">
             <div class="navbar-brand">
-                <a id="sidebar-toggle" role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="nav-menu">
+                <a id="sidebar-toggle" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="nav-menu">
                     <span aria-hidden="true"></span>
                     <span aria-hidden="true"></span>
                     <span aria-hidden="true"></span>
