Minor fixes. Added custom Isso CSS to prevent clash with Bulma

--- a/akamatsu/static/app.scss
+++ b/akamatsu/static/app.scss
@@ -24,6 +24,9 @@ $fa-font-path: "../fonts/fontawesome";
 // Pygments styling (GitHub)
 @import "css/vendor/highlight";
 
+// Custom Isso theme to prevent conflicts
+@import "css/vendor/isso";
+
 
 // Variables
 $admin-sidebar-width: 300px;
