--- a/akamatsu/templates/admin/layout.html
+++ b/akamatsu/templates/admin/layout.html
@@ -141,7 +141,7 @@
     </aside>
 
     {# Content with sidebar gap #}
-    <div class="columns">
+    <div class="columns is-gapless">
         <div id="admin-sidebar-gap" class="column is-narrow is-hidden-mobile">
             {# Only present to allow the sidebar to float without covering content #}
         </div>
