--- a/akamatsu/templates/auth/reset_password.html
+++ b/akamatsu/templates/auth/reset_password.html
@@ -3,42 +3,37 @@
 
 {% block title %}{{ _('Reset password') }}{% endblock %}
 
-{% block html_body %}
-<body>
-    <section class="hero is-light is-fullheight">
-        <div class="hero-body">
-            <div class="container">
-                <div class="column is-4 is-offset-4">
-                    <h2 class="title is-2 has-text-grey has-text-centered"><a href="{{ url_for('auth.login') }}">{{ config['SITENAME'] }}</a></h2>
-                    <h3 class="subtitle is-3 has-text-grey has-text-centered">{{ _('Reset password') }}</h3>
+{% block content %}
+<div class="container">
+    <div class="columns">
+        <div class="column is-4 is-offset-4">
+            <h3 class="subtitle is-3 has-text-grey has-text-centered">{{ _('Forgot password') }}</h3>
 
-                    {{ macros.render_flash_messages() }}
+            {{ macros.render_flash_messages() }}
 
-                    <div class="box">
-                        <form action="" method="POST" role="form">
-                            {{ form.hidden_tag() }}
+            <div class="box">
+                <form action="" method="POST" role="form">
+                    {{ form.hidden_tag() }}
 
-                            {# New password #}
-                            {{ macros.render_input(form.password, icon='key') }}
+                    {# New password #}
+                    {{ macros.render_input(form.password, icon='key') }}
 
-                            {% if form.errors.password %}
-                                {{ macros.render_messages(form.errors.password, size='') }}
-                            {% endif %}
+                    {% if form.errors.password %}
+                        {{ macros.render_messages(form.errors.password, size='') }}
+                    {% endif %}
 
-                            {# Retype password #}
-                            {{ macros.render_input(form.retype_password, icon='key') }}
+                    {# Retype password #}
+                    {{ macros.render_input(form.retype_password, icon='key') }}
 
-                            {% if form.errors.retype_password %}
-                                {{ macros.render_messages(form.errors.retype_password, size='') }}
-                            {% endif %}
+                    {% if form.errors.retype_password %}
+                        {{ macros.render_messages(form.errors.retype_password, size='') }}
+                    {% endif %}
 
-                            {# Submit #}
-                            {{ macros.render_submit(form.submit) }}
-                        </form>
-                    </div>
-                </div>
+                    {# Submit #}
+                    {{ macros.render_submit(form.submit) }}
+                </form>
             </div>
         </div>
-    </section>
-</body>
+    </div>
+</div>
 {% endblock %}
