--- a/akamatsu/static/app.scss
+++ b/akamatsu/static/app.scss
@@ -27,6 +27,9 @@ $fa-font-path: "../fonts/fontawesome";
 // Custom Isso theme to prevent conflicts
 @import "css/vendor/isso";
 
+// Cookie Consent
+@import "css/vendor/cookieconsent";
+
 
 // Variables
 $admin-sidebar-width: 300px;
